# mymonero-simplewallet

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp  params.json
src/: CMakeLists.txt  CmdLineOptions.cpp  CmdLineOptions.h  MicroCore.cpp  MicroCore.h  electrum-words.cpp  electrum-words.h  monero_headers.h  simple_account.cpp  simple_account.h  tools.cpp  tools.h
